Fixing z-index bug

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ a {
     align-items: center;
     width: 100%;
     position: absolute;
+    z-index: 1;
 }
 .header--left {
     width: 200px;
@@ -93,7 +94,7 @@ a {
 
 .main--area {
     position: relative;
-    z-index: -2;
+    z-index: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
